--- a/WheelChef(Chef)/app/src/main/res/layout/activity_order_progress.xml
+++ b/WheelChef(Chef)/app/src/main/res/layout/activity_order_progress.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_view_order_detail"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/color_primary"
